--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
 
-    <!-- Create an iframe tag-->
-
+    <iframe
+      title="Castle Bran"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.76037359171!2d25.364975017443847!3d45.51490220000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b347e5a415de31%3A0xcf922792d921ab7f!2sBran%20Castle!5e0!3m2!1sen!2sus!4v1680392893855!5m2!1sen!2sus"
+      width="100%"
+      height="400px"
+      style="border:0;"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
   </body>
 </html>
